    Forward and backward flow analyses are changed respectively.
	                                                (fqian)
16. Fixed local variable name problem in coffi.LocalVariable....
    reported by Nathan Kitchen. See fix 12 also.    (fqian)
17. Small improvement in ArraySparseSet and BackwardFlowAnalysis pointed
    out by Florian Loitsch.                         (fqian)
18. Add several utility classes for drawing generate graphs, e.g., 
    UnitGraph, BlockGraph, and Hierarchy can produce "dot" file
	for generating postscript files. 
	See soot/util/DotGraph*.java
	(More function will be added on.)               (fqian)

Improvements in version 1.2.2 (Thu Mar 29 11:45:13 EST 2001)

1. added \t case for soot.util.StringTools.getQuotedStringOf.
    (reported by Thomas VanDrunen)
2. CFG.java is improved to handle nested JSR/RETs
3. improved some exception message reported by Olivier Zendra.
4. The Jasmin package is also updated to 1.06-s10, the bug in grammer
   for attributes is fixed.
5. replaced 'getNodes().contains()' by 'containsNode()' in 
   "jimple/toolkits/invoke/MethodCallGraph.java", which speeds up
   the call graph construction significantly (by John Jorgensen.)

Improvements in version 1.2.1 (Fri Jan 12 15:22:59 EST 2001)

1. permissions changes and fix to Baf/JasminClass for BooleanType.
2. removal of a UnitGraph hack that shouldn't have been there.
3. internal changes to cmdline parsing, watch for bigger changes coming
4. fix by patrice to work around stupid jar bug
5. minor changes to jar bug workaround
6. fix for grimp precedence
7. improved error messages in the event of missing .dat files.
8. new build system (via the SootCompiler class).


Improvements in version 1.2.0 (Thu Sep 28 21:41:16 EDT 2000)

1. An annotation framework is included in this release.
2. A clean implementation of VTA is finally included in Soot.
3. New implementation of typing system included
     - contains nice integer typing system.